--- a/hw/hw4/tex/BIB.bib
+++ b/hw/hw4/tex/BIB.bib
@@ -1,6 +1,10 @@
-@article{rasmussen2006gaussian,
-  title={Gaussian processes for machine learning},
-  author={Rasmussen, Carl Edward},
-  year={2006},
-  publisher={Citeseer}
+@article{berger2001objective,
+  title={Objective Bayesian analysis of spatially correlated data},
+  author={Berger, James O and De Oliveira, Victor and Sans{\'o}, Bruno},
+  journal={Journal of the American Statistical Association},
+  volume={96},
+  number={456},
+  pages={1361--1374},
+  year={2001},
+  publisher={Taylor \& Francis}
 }
